@@ -1,6 +1,9 @@
 /**********************************************************************
 Copyright (C) 2003 by Dr. Alex M. Clark and Geoffrey Hutchison
 
+This file is part of the Open Babel project.
+For more information, see <http://openbabel.sourceforge.net/>
+
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation version 2 of the License.
@@ -10,6 +13,8 @@ but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 ***********************************************************************/
+
+#include "babelconfig.h"
 
 #ifndef OB_CRK_H
 #define OB_CRK_H
