@@ -17,6 +17,8 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 General Public License for more details.
 ***********************************************************************/
 
+#include "babelconfig.h"
+
 #if HAVE_IOSTREAM
 #include <iostream>
 #elif HAVE_IOSTREAM_H
